# discovers

backend/: .env.example  docker-compose.yaml  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9a960015f496_create_users_table.py  dc3c515bd776_fixed_the_default_value_of_the_uuid4.py
backend/api/: __init__.py
backend/api/favicon/: favicon.py
backend/api/v1/: __init__.py
backend/api/v1/auth/: __init__.py  auth.py
backend/api/v1/users/: __init__.py  users.py
backend/app/controllers/: auth.py  user.py
backend/app/models/: user.py
backend/app/repositories/: user.py
backend/app/schemas/extras/: current_user.py  token.py
backend/app/schemas/requests/: auth.py
backend/app/schemas/response/: auth.py  user.py
backend/core/: config.py  server.py
backend/core/controller/: base.py
backend/core/database/: session.py  standalone_session.py  transactional.py
backend/core/factory/: factory.py
backend/core/fastapi/dependencies/: authentication.py
backend/core/fastapi/middlewares/: __init__.py  authentication.py  response_logger.py  sqlalchemy.py
backend/core/repository/: base.py
backend/core/security/: jwt.py  password.py
backend/core/utils/: get_timestamp.py
backend/models/: __init__.py  user.py
frontend/: .prettierrc  package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/auth/: layout.tsx  schemas.ts
frontend/src/app/auth/_components/: LoginForm.tsx  LoginRegisterCardFooter.tsx  PasswordInput.tsx  (+1 more)
frontend/src/components/: PasswordInput.tsx
frontend/src/providers/: TanstackReactQueryProvider.tsx
(+6 files in other folders)
